# aliqueit

./: .gitignore  CMakeLists.txt  README.md  aliqueit.ini  aliqueit.txt  whatsnew.txt
.github/workflows/: linux.yml  windows.yml
modules/: FindGMP.cmake
src/: Makefile  aliqueit.cc  aliqueit.h  aliqueit.sln  cfg.cc  cfg.h  misc.cc  misc.h  resource.h
src/aliqueit/: Makefile  aliqueit.cc  aliqueit.h  aliqueit.rc  aliqueit.vcproj  cfg.cc  cfg.h  misc.cc  misc.h
src/aliqueit/nbproject/: configurations.xml  project.xml
